Icon and mobile view fixes

--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -41,9 +41,9 @@ title: Users
                <td class="text-muted">Setting admin</td>
                <td><span class="badge text-bg-danger w-100">Suspended</span></td>
                <td class="text-muted">2 Feb 2023 09:03</td>
-               <td>
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit"></i></a>
-                 <a href="#" title="Re-activate user" ><i class="fal fa-user-check"></i></a>
+               <td class="no-wrap">
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
+                 <a href="#" title="Re-activate user" ><i class="fal fa-user-check fa-lg fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -52,9 +52,9 @@ title: Users
                <td>Setting user</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>13 Feb 2023 16:42</td>
-               <td>
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash"></i></a>
+               <td class="no-wrap">
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -63,9 +63,9 @@ title: Users
                <td>Co-ordinator</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>31 Jan 2023 12:11</td>
-               <td>
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash"></i></a>
+               <td class="no-wrap">
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -74,9 +74,9 @@ title: Users
                <td>Parent</td>
                <td><span class="badge text-bg-info w-100">Invited</span></td>
                <td class="text-muted">Never logged in</td>
-               <td>
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit"></i></a>
-                 <a href="#" title="Re-invite user"><i class="fal fa-paper-plane"></i></a>
+               <td class="no-wrap">
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
+                 <a href="#" title="Re-invite user"><i class="fal fa-paper-plane fa-lg fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -85,9 +85,9 @@ title: Users
                <td>Contributor</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>9 Mar 2022 20:59</td>
-               <td>
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash"></i></a>
+               <td class="no-wrap">
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
                </td>
              </tr>
            </tbody>
