--- a/admin/index.html
+++ b/admin/index.html
@@ -21,9 +21,9 @@ title: Administration
               <div class="card-body">
                 <h5 class="card-title">Users and organisations</h5>
                 <ul class="list-unstyled">
-                  <li><a href="#">Settings</a></li>
-                  <li><a href="#">Teams</a></li>
-                  <li><a href="/admin/admin-users">Users</a></li>
+                  <li class="mb-1"><a href="#">Settings</a></li>
+                  <li class="mb-1"><a href="#">Teams</a></li>
+                  <li class="mb-1"><a href="/admin/admin-users">Users</a></li>
                 </ul>
               </div>
             </div>
@@ -34,13 +34,13 @@ title: Administration
               <div class="card-body">
                 <h5 class="card-title">Communication</h5>
                 <ul class="list-unstyled">
-                  <li><a href="#">Document admin</a></li>
-                  <li><a href="#">Email admin</a></li>
-                  <li><a href="#">Help</a></li>
-                  <li><a href="#">Onscreen guidance</a></li>
-                  <li><a href="#">Reminder emails</a></li>
-                  <li><a href="#">Section guidance</a></li>
-                  <li><a href="#">Templates</a></li>
+                  <li class="mb-1"><a href="#">Document admin</a></li>
+                  <li class="mb-1"><a href="#">Email admin</a></li>
+                  <li class="mb-1"><a href="#">Help</a></li>
+                  <li class="mb-1"><a href="#">Onscreen guidance</a></li>
+                  <li class="mb-1"><a href="#">Reminder emails</a></li>
+                  <li class="mb-1"><a href="#">Section guidance</a></li>
+                  <li class="mb-1"><a href="#">Templates</a></li>
                 </ul>
               </div>
             </div>
@@ -51,22 +51,22 @@ title: Administration
               <div class="card-body">
                 <h5 class="card-title">System</h5>
                 <ul class="list-unstyled">
-                  <li><a href="#">Case ID configuration</a></li>
-                  <li><a href="#">Cease plan reasons</a></li>
-                  <li><a href="#">Close case reasons</a></li>
-                  <li><a href="#">Close review reasons</a></li>
-                  <li><a href="#">Ethnicities</a></li>
-                  <li><a href="#">Exception reasons</a></li>
-                  <li><a href="#">Genders</a></li>
-                  <li><a href="#">Languages</a></li>
-                  <li><a href="#">Legal status</a></li>
-                  <li><a href="#">LA names</a></li>
-                  <li><a href="#">Meeting types</a></li>
-                  <li><a href="#">Primary needs types</a></li>
-                  <li><a href="#">Setting types</a></li>
-                  <li><a href="#">System settings</a></li>
-                  <li><a href="#">Support audit</a></li>
-                  <li><a href="#">Work based placements</a></li>
+                  <li class="mb-1"><a href="#">Case ID configuration</a></li>
+                  <li class="mb-1"><a href="#">Cease plan reasons</a></li>
+                  <li class="mb-1"><a href="#">Close case reasons</a></li>
+                  <li class="mb-1"><a href="#">Close review reasons</a></li>
+                  <li class="mb-1"><a href="#">Ethnicities</a></li>
+                  <li class="mb-1"><a href="#">Exception reasons</a></li>
+                  <li class="mb-1"><a href="#">Genders</a></li>
+                  <li class="mb-1"><a href="#">Languages</a></li>
+                  <li class="mb-1"><a href="#">Legal status</a></li>
+                  <li class="mb-1"><a href="#">LA names</a></li>
+                  <li class="mb-1"><a href="#">Meeting types</a></li>
+                  <li class="mb-1"><a href="#">Primary needs types</a></li>
+                  <li class="mb-1"><a href="#">Setting types</a></li>
+                  <li class="mb-1"><a href="#">System settings</a></li>
+                  <li class="mb-1"><a href="#">Support audit</a></li>
+                  <li class="mb-1"><a href="#">Work based placements</a></li>
                 </ul>
               </div>
             </div>
