--- a/help/index.html
+++ b/help/index.html
@@ -10,7 +10,7 @@ title: Help
 
   <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
     <div class="row gx-5 gy-2 px-xl-5">
-      <div class="col-md-8">
+      <div class="col-md-8 break-word">
 
         <h1>Help</h1>
         <p>For assistance using the EHC Hub, please refer to the guidance documents and videos below. Further assistance can be sought from an administrator of the EHC Hub within your local authority. Please refer to your service manager to help identify the relevant contact person.</p>
