--- a/parent-dash/index.html
+++ b/parent-dash/index.html
@@ -93,7 +93,7 @@ title: Parent dash
         </div>
 
         <div class="d-flex">
-          <a class="btn btn-success my-5 flex-fill" href="#">View draft plan</a>
+          <a class="btn btn-success my-5 flex-fill" href="/case-view">View draft plan</a>
         </div>
 
         <div class="text-center">
