--- a/case-view/index.html
+++ b/case-view/index.html
@@ -20,7 +20,7 @@ title: EHC Hub
           <p class="d-none d-md-block">Plan decision: 17 Dec 2022</p>
           <p>Plan due: 14 Jan 2023</p>
           <div class="d-md-none dropdown">
-            <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Stages<i class="fa fa-caret-down ms-1"></i></a>
+            <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Stages<i class="fal fa-angle-down ms-1"></i></a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Request</a></li>
               <li><a class="dropdown-item" href="#">Decision</a></li>
