--- a/case-view/index.html
+++ b/case-view/index.html
@@ -8,6 +8,15 @@ title: EHC Hub
 
   {% include sidenav.html %}
 
+
+  <div class="d-flex d-md-none justify-content-between align-items-start idx-border-b mt-3 px-6 pb-2">
+    <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
+    <a class="d-block d-md-none align-self-center" role="button" data-bs-toggle="collapse" href="#idx-sidenav-case" aria-controls="idx-sidenav-case" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="visually-hidden">Case side menu</span>
+      <i class="fal fa-info-circle fs-2 text-neutral-600"></i>
+    </a>
+  </div>
+
   {% include sidenav-case.html %}
 
   <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
