Introduce onboarding pages

--- a/parent-dash/index.html
+++ b/parent-dash/index.html
@@ -10,7 +10,7 @@ title: Parent dash
 
   <main id="content" class="main container-fluid mt-3 px-7 mt-xl-8 px-xl-8">
     <div class="row gx-5 gy-2 px-xl-5">
-      <div class="col">
+      <div class="col-lg-8">
 
         <ul class="nav idx-tabs">
           <li class="nav-item">
