--- a/onboarding/index.html
+++ b/onboarding/index.html
@@ -13,7 +13,14 @@ title: EHC Hub
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">Log in</h4>
+			<h4 class="idx-login-heading my-7">Create a password</h4>
+			<p>Your password must have:</p>
+			<ul>
+				<li>at least 8 characters</li>
+				<li>at least one symbol (eg ?!£%)</li>
+				<li>at least one capital letter</li>
+			</ul>
+
 
 			<div class="alert alert-warning d-none d-flex p-4" role="alert">
 				<div>
@@ -22,16 +29,14 @@ title: EHC Hub
 			</div>
 
 			<div class="form mb-3">
-				<label for="emailInput">Email address</label>
-				<input type="email" class="form-control" id="emailInput" placeholder="">
-			</div>
-			<div class="form mb-3">
 				<label for="passwordInput">Password</label>
 				<input type="password" class="form-control" id="passwordInput" placeholder="">
 			</div>
-			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
-			<p class="text-center"><a href="onboarding/p-reset">Forgotten password?</a></p>
-			<p class="text-center"><a href="#">Request needs assessment</a></p>
+			<div class="form mb-3">
+				<label for="confirm-passwordInput">Confirm password</label>
+				<input type="password" class="form-control" id="confirm-passwordInput" placeholder="">
+			</div>
+			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="tfa-choose">Continue</a>
 		</main>
 
 	</div>
