Complete onboarding pages for app and sms

--- a/onboarding/tfa-app.html
+++ b/onboarding/tfa-app.html
@@ -15,7 +15,7 @@ title: EHC Hub
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
 			<h4 class="idx-login-heading my-7">Use an authentication app on your device</h4>
 
-			<ol>
+			<ol class="ps-4">
 				<li class="my-1">Install or open an authentication app on your device and add an account.</li>
 				<li class="my-1">Enter the following key in your authentication app: <strong>857 665 444</strong></li>
 
