Add passphrase element

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ title: EHC Hub
 				<label for="passwordInput">Password</label>
 				<input type="password" class="form-control" id="passwordInput" placeholder="">
 			</div>
-			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
-			<p class="text-center"><a href="onboarding/p-reset">Forgotten password?</a></p>
-			<p class="text-center"><a href="#">Request needs assessment</a></p>
+			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/onboarding/tfa-app-auth">Log in</a>
+			<p><a href="onboarding/p-reset">Forgotten password?</a></p>
+			<p><a href="#">Request needs assessment</a></p>
 		</main>
 
 	</div>
