--- a/onboarding/index.html
+++ b/onboarding/index.html
@@ -36,7 +36,7 @@ title: EHC Hub
 				<label for="confirm-passwordInput">Confirm password</label>
 				<input type="password" class="form-control" id="confirm-passwordInput" placeholder="">
 			</div>
-			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="tfa-choose">Continue</a>
+			<a class="btn btn-primary idx-login-btn my-3" href="tfa-choose">Continue</a>
 		</main>
 
 	</div>
