--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -42,7 +42,9 @@ title: EHC Hub
 				<p class="mb-0">When the account you’re accessing includes sensitive information, it’s expected that you provide an extra piece of information. The EHC Hub does this by asking you to enter a unique code each time you log in.</p>
 			</div>
 
-			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="tfa-app">Continue</a>
+			<a class="btn btn-primary idx-login-btn my-6" href="tfa-app">Continue</a>
+
+			<a class="mt-3 mb-6" href="tfa-phrase">What if I don't have a mobile phone?</a>
 
 		</main>
 
