--- a/onboarding/tfa-sms-auth.html
+++ b/onboarding/tfa-sms-auth.html
@@ -13,20 +13,16 @@ title: EHC Hub
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">Enter your log in code</h4>
-			<p>We've sent a log in code to mobile phone number ending <strong>434</strong>.</p>
+			<h4 class="idx-login-heading my-7">Enter your code</h4>
+			<p>Enter the verification code that we've sent to mobile phone number ending <strong>434</strong>.</p>
 
 			<div class="form mb-3">
-				<label for="codeInput">Log in code</label>
+				<label for="codeInput" class="visually-hidden"></label>
 				<input type="text" class="form-control" id="codeInput" maxlength="6" placeholder="000000">
 			</div>
-
-			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
-
-			<p><a href="tfa-sms-1">Resend log in code</a></p>
-
-			<p>If you'd rather use an authentication app, <a href="tfa-choose">start again</a>.</p>
-
+			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
+			<p><a href="#">Resend log in code</a></p>
+			<p><a href="/">Back to Log in</a></p>
 		</main>
 
 	</div>
