--- a/onboarding/p-reset.html
+++ b/onboarding/p-reset.html
@@ -21,7 +21,7 @@ title: EHC Hub
 				<input type="email" class="form-control" id="emailInput" placeholder="">
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Send email</a>
-			<p class="text-center"><a href="/">Back to Log in</a></p>
+			<p><a href="/">Back to Log in</a></p>
 		</main>
 
 	</div>
