UI foundations and text changes

--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -42,8 +42,8 @@ title: Users
                <td><span class="badge text-bg-danger w-100">Suspended</span></td>
                <td class="text-muted">2 Feb 2023 09:03</td>
                <td class="no-wrap">
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
-                 <a href="#" title="Re-activate user" ><i class="fal fa-user-check fa-lg fa-fw"></i></a>
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
+                 <a href="#" title="Re-activate user" ><i class="fal fa-user-check fs-2 fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -53,8 +53,8 @@ title: Users
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>13 Feb 2023 16:42</td>
                <td class="no-wrap">
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -64,8 +64,8 @@ title: Users
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>31 Jan 2023 12:11</td>
                <td class="no-wrap">
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -75,8 +75,8 @@ title: Users
                <td><span class="badge text-bg-info w-100">Invited</span></td>
                <td class="text-muted">Never logged in</td>
                <td class="no-wrap">
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
-                 <a href="#" title="Re-invite user"><i class="fal fa-paper-plane fa-lg fa-fw"></i></a>
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
+                 <a href="#" title="Re-invite user"><i class="fal fa-paper-plane fs-2 fa-fw"></i></a>
                </td>
              </tr>
              <tr>
@@ -86,8 +86,8 @@ title: Users
                <td><span class="badge text-bg-success w-100">Active</span></td>
                <td>9 Mar 2022 20:59</td>
                <td class="no-wrap">
-                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fa-lg fa-fw"></i></a>
-                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fa-lg fa-fw"></i></a>
+                 <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
+                 <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
                </td>
              </tr>
            </tbody>
