--- a/admin/index.html
+++ b/admin/index.html
@@ -16,10 +16,10 @@ title: Administration
         <p>Configure and administer different sections of the EHC Hub for your needs.</p>
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-          <div class="col">
+          <div class="col mt-7">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Users and organisations</h5>
+                <h5 class="card-title text-neutral-500">Users and organisations</h5>
                 <ul class="list-unstyled">
                   <li class="mb-1"><a href="#">Settings</a></li>
                   <li class="mb-1"><a href="#">Teams</a></li>
@@ -29,10 +29,10 @@ title: Administration
             </div>
           </div>
 
-          <div class="col">
+          <div class="col mt-7">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Communication</h5>
+                <h5 class="card-title text-neutral-500">Communication</h5>
                 <ul class="list-unstyled">
                   <li class="mb-1"><a href="#">Document admin</a></li>
                   <li class="mb-1"><a href="#">Email admin</a></li>
@@ -46,10 +46,10 @@ title: Administration
             </div>
           </div>
 
-          <div class="col">
+          <div class="col mt-7">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">System</h5>
+                <h5 class="card-title text-neutral-500">System</h5>
                 <ul class="list-unstyled">
                   <li class="mb-1"><a href="#">Case ID configuration</a></li>
                   <li class="mb-1"><a href="#">Cease plan reasons</a></li>
