--- a/case-view/index.html
+++ b/case-view/index.html
@@ -12,8 +12,10 @@ title: EHC Hub
   <div class="d-flex d-md-none justify-content-between align-items-start idx-border-b mt-3 px-6 pb-2">
     <h1 class="mb-0 fs-2 no-border">Ellery Holden</h1>
     <a class="d-block d-md-none align-self-center" role="button" data-bs-toggle="collapse" href="#idx-sidenav-case" aria-controls="idx-sidenav-case" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="visually-hidden">Case side menu</span>
-      <i class="fal fa-info-circle fs-2 text-neutral-600"></i>
+      <!-- <span class="visually-hidden">Case side menu</span> -->
+      Details
+      <!-- <i class="fal fa-info-circle fs-2 text-neutral-600"></i> -->
+      <i class="fal fa-angle-down ms-1 text-neutral-600"></i>
     </a>
   </div>
 
@@ -27,7 +29,7 @@ title: EHC Hub
 
         <div class="d-flex justify-content-between text-neutral-500">
           <p class="d-none d-md-block">Plan decision: 17 Dec 2022</p>
-          <p>Plan due: 14 Jan 2023</p>
+          <p>EHC Plan due: 14 Jan 2023</p>
           <div class="d-md-none dropdown">
             <a class="idx-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">Stages<i class="fal fa-angle-down ms-1"></i></a>
             <ul class="dropdown-menu">
@@ -35,12 +37,12 @@ title: EHC Hub
               <li><a class="dropdown-item" href="#">Decision</a></li>
               <li><a class="dropdown-item" href="#">Assessment</a></li>
               <li><a class="dropdown-item" href="#">Decision</a></li>
-              <li><a class="dropdown-item" href="#">Plan</a></li>
+              <li><a class="dropdown-item" href="#">EHC Plan</a></li>
             </ul>
           </div>
         </div>
 
-        <h1 class="no-border">Education, Health and Care Plan</h1>
+        <h1 class="no-border">EHC Plan</h1>
         <p>The plan is initially put together using all of the contributed advice and views from the Assessment stage. This can be changed and shaped in to a draft plan to share with the young person, parents, carers or guardians, education setting and proffessionals involved in the needs assessment.</p>
 
         {% include actions-plan.html %}
