--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: EHC Hub
 
 		{% include login-aside.html %}
 
-		<main class="col-md-6 col-lg-4 p-7 idx-login-form">
+		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
@@ -32,6 +32,7 @@ title: EHC Hub
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/onboarding/tfa-app-auth">Log in</a>
 			<p><a href="onboarding/p-reset">Forgotten password?</a></p>
 			<p><a href="#">Request needs assessment</a></p>
+			<p><a href="#">Need some help?</a></p>
 		</main>
 
 	</div>
