--- a/onboarding/tfa-app.html
+++ b/onboarding/tfa-app.html
@@ -9,14 +9,20 @@ title: EHC Hub
 
 		{% include login-aside.html %}
 
-		<main class="col-md-6 col-lg-4 p-7 idx-login-form">
+		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">Use an authentication app on your device</h4>
+			<h4 class="idx-login-heading my-7">Use an app on your smartphone or tablet</h4>
 
 			<ol class="ps-4">
-				<li class="my-1">Install or open an authentication app on your device and add an account.</li>
+				<li class="my-1">
+					Install or open an authenticator app on your smartphone or tablet and add an account.
+					<div>
+						<a href="https://www.apple.com/uk/app-store/" target="_blank" data-bs-toggle="tooltip" data-bs-title="Search for an authenticator app on the App Store"><img src="/assets/images/app-store.svg" height="30"></a>
+						<a href="https://play.google.com/store/search?q=Authenticator&c=apps" target="_blank" data-bs-toggle="tooltip" data-bs-title="Search for an authenticator app on Google Play"><img src="/assets/images/google-play-badge.png" height="45"></a>
+					</div>
+				</li>
 				<li class="my-1">Enter the following key in your authentication app: <strong>857 665 444</strong></li>
 
 				<a role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
