--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -9,26 +9,26 @@ title: EHC Hub
 
 		{% include login-aside.html %}
 
-		<main class="col-md-6 col-lg-4 p-7 idx-login-form">
+		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">We need to send you a code each time you log in</h4>
-			<p>How would you like to receive your code?</p>
+			<h4 class="idx-login-heading my-7">You need to enter a code each time you log in</h4>
+			<p>How do you want to get your code?</p>
+
+			<div class="form-check">
+			  <input class="form-check-input" type="radio" name="flexRadioApp" id="flexRadioApp">
+			  <label class="form-check-label" for="flexRadioApp">
+			    <p class="mb-1">Smartphone or tablet app</p>
+					<p class="text-neutral-500">Look up your code without relying on mobile phone reception or if you don't wish the local authority to store your mobile phone number.</p>
+			  </label>
+			</div>
 
 			<div class="form-check">
 			  <input class="form-check-input" type="radio" name="flexRadioSMS" id="flexRadioSMS">
 			  <label class="form-check-label" for="flexRadioSMS">
 			    <p class="mb-1">Text message</p>
 					<p class="text-neutral-500">We'll send your code by text message (SMS). There is no cost to you.</p>
-			  </label>
-			</div>
-
-			<div class="form-check">
-			  <input class="form-check-input" type="radio" name="flexRadioApp" id="flexRadioApp">
-			  <label class="form-check-label" for="flexRadioApp">
-			    <p class="mb-1">Authentication app</p>
-					<p class="text-neutral-500">Look up your code without relying on mobile phone reception or if you don't wish the local authority to store your mobile phone number.</p>
 			  </label>
 			</div>
 
