--- a/onboarding/tfa-sms-2.html
+++ b/onboarding/tfa-sms-2.html
@@ -9,7 +9,7 @@ title: EHC Hub
 
 		{% include login-aside.html %}
 
-		<main class="col-md-6 col-lg-4 p-7 idx-login-form">
+		<main id="content" class="col-md-6 col-lg-4 p-7 idx-login-form">
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
