Update password criteria

--- a/onboarding/index.html
+++ b/onboarding/index.html
@@ -18,7 +18,7 @@ title: EHC Hub
 			<ul>
 				<li>at least 8 characters</li>
 				<li>at least one symbol (eg ?!£%)</li>
-				<li>at least one capital letter</li>
+				<li>at least one uppercase letter</li>
 			</ul>
 
 			<div class="form mb-3">
