Added parent guidance admin page

--- a/admin/index.html
+++ b/admin/index.html
@@ -38,6 +38,7 @@ title: Administration
                   <li class="mb-1"><a href="#">Email admin</a></li>
                   <li class="mb-1"><a href="#">Help</a></li>
                   <li class="mb-1"><a href="#">Onscreen guidance</a></li>
+                  <li class="mb-1"><a href="/admin/admin-parent-guidance">Parent guidance</a></li>
                   <li class="mb-1"><a href="#">Reminder emails</a></li>
                   <li class="mb-1"><a href="#">Section guidance</a></li>
                   <li class="mb-1"><a href="#">Templates</a></li>
