--- a/parent-dash/index.html
+++ b/parent-dash/index.html
@@ -39,8 +39,8 @@ title: Parent dash
           </div>
           <div class="p-2">
             <h2>Philip Tate</h2>
-            <p class="text-neutral-500">Request date: 28th Aug 2022<br>
-            Plan due: 14th Jan 2023</p>
+            <p class="text-neutral-500">Request date: 28 Aug 2022<br>
+            Plan due: 14 Jan 2023</p>
           </div>
         </div>
 
