Added anon pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: no-banner
+layout: headerless
 title: EHC Hub
 ---
 
@@ -31,7 +31,7 @@ title: EHC Hub
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/onboarding/tfa-app-auth">Log in</a>
 			<p><a href="onboarding/p-reset">Forgotten password?</a></p>
-			<p><a href="#">Request needs assessment</a></p>
+			<p><a href="anon">Request needs assessment</a></p>
 			<p><a href="#">Need some help?</a></p>
 		</main>
 
