Fix accordion button arrow direction

--- a/new-request/index.html
+++ b/new-request/index.html
@@ -13,15 +13,14 @@ title: EHC Hub
       <div class="col">
 
         <h1>Request an EHC needs assessment</h1>
-        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it.</p>
-        <a href="#">More...</a>
+        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#">Read more...</a></p>
 
         {% include actions-new-request.html %}
 
         <div class="accordion" id="accordionExample">
           <div class="accordion-item my-5">
             <h2 class="accordion-header">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 Consent
               </button>
             </h2>
