--- a/new-request/index.html
+++ b/new-request/index.html
@@ -13,7 +13,7 @@ title: EHC Hub
       <div class="col">
 
         <h1>Request an EHC needs assessment</h1>
-        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#">Read more...</a></p>
+        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#">More...</a></p>
 
         {% include actions-new-request.html %}
 
@@ -114,7 +114,7 @@ title: EHC Hub
           <div class="accordion-item my-5">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                Views of the child or young person and theor parent, carer or guardian
+                Views of the child or young person and their parent, carer or guardian
               </button>
             </h2>
             <div id="collapseEight" class="accordion-collapse collapse">
