Corrected typo on profile page

--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -103,7 +103,7 @@ title: EHC Hub
                 <div class="row">
                   <div class="col-md-6">
                     <div class="my-5">
-                      <p class="text-muted">Two factor authentications is not currently enabled.</p>
+                      <p class="text-muted">Two factor authentication is not currently enabled.</p>
                     </div>
                   </div>
                 </div>
