--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -23,7 +23,7 @@ title: Users
 
         <p class="mb-0"><strong>1 - 5</strong> of <strong>5</strong> users based on your current search and filter options.</p>
         <div class="table-responsive">
-         <table class="table table-hover table-borderless idx-results-table align-middle">
+         <table class="table table-striped table-hover table-borderless idx-results-table align-middle">
            <thead>
              <tr>
                <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
