--- a/reports/index.html
+++ b/reports/index.html
@@ -27,7 +27,7 @@ title: Reporting
         </ul>
 
         <div class="table-responsive">
-         <table class="table table-hover table-borderless idx-results-table align-middle">
+         <table class="table table-striped table-hover table-borderless idx-results-table align-middle">
            <thead>
              <tr>
                <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
