Minor text changes

--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -134,7 +134,7 @@ title: EHC Hub
                   <img src="/assets/images/about_1.png" class="img-about" alt="Cartooon canvas on easel">
                 </div>
                 <div class="card-body">
-                  <p class="card-text">Things that are imprtant to me</p>
+                  <p class="card-text">Things that are important to me</p>
                   <a href="#">Open</a>
                 </div>
               </div>
