--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -37,7 +37,7 @@ title: EHC Hub
                     <div class="mb-3">
                       <label for="exampleInputRole1" class="form-label">Role</label>
                       <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" disabled readonly aria-describedby="textHelp2">
-                      <div id="textHelp2" class="form-text">Your level of access in the EHC Hub which cannot be changed.</div>
+                      <div id="textHelp2" class="form-text">Your level of access in the EHC Hub and cannot be changed.</div>
                     </div>
                   </div>
                 </div>
@@ -54,10 +54,21 @@ title: EHC Hub
                     <div class="mb-3">
                       <label for="exampleInputEmail2" class="form-label">Confirm email address</label>
                       <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp2">
-                      <div id="emailHelp2" class="form-text">This is necessary to reduce mistakes when updating your email address.</div>
+                      <div id="emailHelp2" class="form-text">This is necessary to avoid mistakes when updating your email address.</div>
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="mb-3">
+                      <label for="exampleInputTextJob1" class="form-label">Job title</label>
+                      <input type="text" class="form-control" id="exampleInputTextJob1" aria-describedby="jobHelp">
+                      <div id="jobHelp" class="form-text">This can provide the family context to your involvement with a child/young person.</div>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="col-md-6">
                   <div class="mb-3">
                     <label for="checkbox-group" class="form-label">Preferred method of contact</label>
